// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integer Form component Render icon 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render invisible condition is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Integer Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Integer Form component Render invisible is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render label 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render max (ko) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" min="1" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render max (ok) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" max="3" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render min (ko) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" min="3" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render min (ok) 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" min="1" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render mode readonly by config 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Form component Render mode readonly conditional param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Form component Render mode readonly param 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Form component Render placeholder 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Integer Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Integer Form component Render required without value 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control has-icons-right"><input type="number" autocomplete="on" step="1" value="" class="input is-danger"> <!----> <span class="icon is-right is-danger"><i class="fa fa-exclamation-circle"></i></span>
<!---->
</div>
<p class="help is-danger">this field is required</p>
</div>
</span>
`;

exports[`Integer Form component Render tooltip left 1`] = `<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render tooltip up 1`] = `<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render with data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="2" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Form component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="control is-clearfix"><input type="number" autocomplete="on" step="1" value="" class="input"> <!----> <!----> <!----></div> <!----></div></span>`;

exports[`Integer Thumbnail component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Integer Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Integer Thumbnail component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span> 2 </span>
<!---->
</div>
</span>
`;

exports[`Integer Thumbnail component Render without data 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <span>  </span>
<!---->
</div>
</span>
`;

exports[`Integer list component Render invisible condition is false 1`] = `<span data-server-rendered="true">2</span>`;

exports[`Integer list component Render invisible condition is true 1`] = `<span data-server-rendered="true"></span>`;

exports[`Integer list component Render invisible is True 1`] = `<span data-server-rendered="true"></span>`;

exports[`Integer list component Render invisible is false 1`] = `<span data-server-rendered="true">2</span>`;

exports[`Integer list component Render with data 1`] = `<span data-server-rendered="true">2</span>`;

exports[`Integer list component Render without data 1`] = `<span data-server-rendered="true"></span>`;
